--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  /* background-image: url('https://w0.peakpx.com/wallpaper/544/339/HD-wallpaper-mountain-road-in-late-autumn-fall-mountains-autumn-roads-nature.jpg'); */
+  background-image: url('https://journalofethics.ama-assn.org/sites/journalofethics.ama-assn.org/files/2018-07/shutterstock_719574463.jpg');
   background-size:cover;
   /* color:whitesmoke; */
   flex-direction: column;
