--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 
  .create-form label{
-  color:whitesmoke;
+  /* color:whitesmoke; */
   font-family: 'Montserrat', sans-serif;
-  font-size: 12px;
+  font-size: 15px;
 }
 
  .main{
